# clawfarm-masterpool

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: build.yml
docs/: clawfarm-attestation-phase1-abi.md  clawfarm-attestation-phase1-idl-sketch.json  clawfarm-attestation-phase1-interface-design.md  phase1-core-economics.md  phase1-post-smoke-validation-checklist.md  phase1-testnet-runbook.md
docs/superpowers/plans/: 2026-04-19-phase1-gap-closure.md  (+7 more)
programs/clawfarm-attestation/: Cargo.toml  README.md  README.zh-CN.md
programs/clawfarm-masterpool/: Cargo.toml  README.md  README.zh-CN.md
programs/clawfarm-masterpool/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/clawfarm-masterpool/src/instructions/: admin.rs  challenge.rs  config.rs  distribution.rs  faucet.rs  mod.rs  provider.rs  receipt.rs  reward.rs  setup.rs
programs/clawfarm-masterpool/src/state/: accounts.rs  mod.rs  types.rs
scripts/: test-phase1.sh
scripts/phase1/: bootstrap-testnet.ts  common.ts  compact-receipt.ts  devnet-smoketest.example.json  devnet-smoketest.ts  faucet-claim.ts  faucet-configure.ts  faucet-fund.ts  faucet-status.ts  mint-test-usdc.ts  post-smoke-validation.example.json  post-smoke-validation.ts  update-config.ts
tests/: clawfarm-attestation.ts  clawfarm-masterpool.ts  phase1-bootstrap-script.ts  phase1-devnet-smoketest-script.ts  phase1-faucet-script.ts  phase1-integration.ts  phase1-post-smoke-validation-script.ts  phase1-script-helpers.ts  phase1-test-usdc-script.ts  phase1-update-config-script.ts
(+40 files in other folders)
