[package]
name = "clawfarm-masterpool"
version = "0.1.0"
description = "ClawFarm Master Pool - Program-controlled vault for Genesis emission and protocol distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "clawfarm_masterpool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
